--- a/public/checkout.html
+++ b/public/checkout.html
@@ -1,45 +1,79 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>決済 - Vulnerable Shop</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
   <header class="navbar">
     <div class="nav-brand"><h1>🛒 Vulnerable Shop</h1></div>
     <div class="nav-links">
-      <a href="/">ホーム</a>
-      <a href="/products.html">商品</a>
-      <a href="/cart.html">カート</a>
-      <a href="/checkout.html">決済</a>
+      <a href="./index.html">ホーム</a>
+      <a href="./products.html">商品</a>
+      <a href="./cart.html">カート <span id="cartCount" class="cart-badge">0</span></a>
+      <a href="./checkout.html" aria-current="page" style="font-weight:700;">決済</a>
+
+      <div class="auth-buttons">
+        <button id="loginBtn" class="btn btn-primary">ログイン</button>
+        <button id="registerBtn" class="btn btn-secondary">新規登録</button>
+        <button id="logoutBtn" class="btn btn-danger" style="display:none;">ログアウト</button>
+        <span id="navUser" class="user-pill" hidden></span>
+      </div>
     </div>
   </header>
-  <main class="cart-section" style="max-width:640px;">
+
+  <main class="products-section" style="max-width:920px;">
     <h2>決済情報</h2>
-    <div id="msg"></div>
-    <form id="pay" class="cart-items">
-      <div class="form-group"><label>氏名</label><input id="name" required></div>
-      <div class="form-group"><label>カード番号</label><input id="card" required></div>
-      <div class="form-group"><label>有効期限 (MM/YY)</label><input id="exp" required></div>
-      <div class="form-group"><label>CVV</label><input id="cvv" required></div>
-      <button class="btn btn-success" type="submit">支払う</button>
+    <p id="payStatus" style="opacity:.85;"></p>
+
+    <form id="checkoutForm" class="modal-content" style="max-width:520px;">
+      <label>氏名<input id="cardName" type="text" autocomplete="cc-name" required></label>
+      <label>カード番号<input id="cardNumber" type="text" inputmode="numeric" autocomplete="cc-number" required></label>
+      <label>有効期限 (MM/YY)<input id="cardExp" type="text" inputmode="numeric" autocomplete="cc-exp" placeholder="MM/YY" required></label>
+      <label>CVV<input id="cardCvv" type="password" inputmode="numeric" autocomplete="cc-csc" required></label>
+
+      <div class="sum-row" style="margin-top:8px;">
+        <div class="sum-ttl">合計</div>
+        <div id="checkoutTotal">¥0</div>
+      </div>
+
+      <button id="payBtn" type="submit" class="btn btn-success" style="margin-top:6px;">支払う</button>
     </form>
   </main>
-  <script>
-    function show(m,t='info'){ document.getElementById('msg').innerHTML = `<div class="alert alert-${t}">${m}</div>` }
-    async function total(){ const cart=JSON.parse(localStorage.getItem('cart')||'[]'); let s=0; for(const it of cart){ const p=await (await fetch('/api/product/'+it.productId)).json(); s+=p.price*it.quantity } return s }
-    document.getElementById('pay').addEventListener('submit', async (e)=>{
-      e.preventDefault();
-      const payload = { name: name.value, cardNumber: card.value, expiry: exp.value, cvv: cvv.value, total: await total() };
-      const r = await fetch('/api/checkout', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload)});
-      const d = await r.json();
-      if(!r.ok){ show('決済失敗: '+(d.error||'unknown'), 'danger'); return; }
-      show(`決済完了: 合計 <b>¥${d.total}</b> / 名義 <i>${d.name}</i>`, 'success');
-      localStorage.removeItem('cart');
-    });
-  </script>
+
+  <!-- 共通ロジック & 認証（順序はどちらでもOK） -->
+  <script src="./script.js" defer></script>
+  <script src="./js/auth.js" defer></script>
+
+  <!-- 決済ページ専用ロジック（必ず最後に / 1回だけ読み込む） -->
+  <script src="./js/checkout.js" defer></script>
+
+  <!-- 既存のログイン/登録モーダル（index.htmlと同じブロックを流用してOK） -->
+  <div id="registerModal" class="modal hidden" aria-hidden="true">
+    <div class="modal-content" tabindex="-1">
+      <button type="button" id="registerClose" class="modal-close">×</button>
+      <h3>新規登録</h3>
+      <form id="registerForm">
+        <input id="regUsername"  type="text"     placeholder="ユーザー名" required>
+        <input id="regEmail"     type="email"    placeholder="メール（任意）">
+        <input id="regPassword"  type="password" placeholder="パスワード" required>
+        <button id="registerSubmit" type="submit" class="btn btn-primary">登録</button>
+      </form>
+    </div>
+  </div>
+
+  <div id="loginModal" class="modal hidden" aria-hidden="true">
+    <div class="modal-content" tabindex="-1">
+      <button type="button" id="loginClose" class="modal-close">×</button>
+      <h3>ログイン</h3>
+      <form id="loginForm">
+        <input id="loginUsername" type="text"     placeholder="ユーザー名" required>
+        <input id="loginPassword" type="password" placeholder="パスワード" required>
+        <button id="loginSubmit" type="submit" class="btn btn-primary">ログイン</button>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
-
