--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,14 @@
     <div><a href="./cart.html" class="btn btn-success">チェックアウト</a></div>
   </div></div>
 </section>
+<!-- 最近の注文 -->
+<section id="recent-orders" class="products-section">
+  <h2>最近の注文</h2>
+  <div id="recentOrders" class="orders-list">
+    <!-- script.js が埋める -->
+  </div>
+  <p id="ordersHint" style="opacity:.7; margin-top:6px;"></p>
+</section>
 
 <!-- auth modals -->
 <div id="registerModal" class="modal hidden" aria-hidden="true">
